# mcp-redmine

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  VERSION.txt  pyproject.toml  server.py  test_filtering.py  test_format.py
.changesets/: journal-filtering-feature.md
.github/workflows/: ci.yml
mcp_redmine/: filter_presets.py  journal_filters.py  mcp_capabilities.py  response_filters.py  server.py
mcp_redmine/plugins/: example.py
tests/: __init__.py  test_filter_presets.py  test_integration_simple.py  test_journal_filters.py  test_mcp_capabilities.py  test_redos_security.py  test_response_filters.py  test_security_and_edge_cases.py
